tests/paczka1/small_fuzzy/59112392.err
Error in line 6: j8HVeKH4C2 S205 91,1
Error in line 12: bVMJLk4OW0r S141 4,60
